Updated references array and fixed some alignment.

--- a/files/css/landingpage.css
+++ b/files/css/landingpage.css
@@ -9,8 +9,8 @@
 }
 
 #skillsList {
-    margin-left: 36%;
-    margin-right: 44%;
+    margin-left: 38%;
+    margin-right: 42%;
     text-align: center;
     list-style: none;
 }
